--- a/Open Lab Task 2/Open Lab Task 2.vcxproj.filters
+++ b/Open Lab Task 2/Open Lab Task 2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="oooo.cpp">
+    <ClCompile Include="My code for Task 2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
