--- a/Open Lab Task 2/Open Lab Task 2.vcxproj
+++ b/Open Lab Task 2/Open Lab Task 2.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="oooo.cpp" />
+    <ClCompile Include="My code for Task 2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
